--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:lsbEYmc2HJ+OM7MnWbhJI/G8hpZFxFblwXT83VvUdSU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:88
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -16,9 +16,9 @@ DB_PORT=3306
 DB_USERNAME=root
 #DB_USERNAME=db_user
 DB_DATABASE=encompass
-DB_PASSWORD=password
+#DB_PASSWORD=password
 #DB_PASSWORD="77F1gN63Z6PWzOgxzNevdraW"
-#DB_PASSWORD=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
